# SysY-compiler

./: .gitignore  CMakeLists.txt  README.md  run-sysy.bat  编译原理课程设计介绍.pptx
docs/: ai_codegen.md  backend_defense_guide.md  beginner_guide.md  code_structure_guide.md  compiler2022_x_migration_notes.md  defense_demo_script.md  report.md
include/sysy/: ast.hpp  common.hpp  driver.hpp  riscv.hpp  semantic.hpp
scripts/: run_case.sh  run_smoke.sh
src/: main.cpp
src/ast/: ast.cpp
src/backend/: RiscV.cpp
src/frontend/: driver.cpp  sysy.l  sysy.y
src/frontend/compiler2022_x/FrontEnd/YaccLex/: StrDump.cpp
src/frontend/compiler2022_x/FrontEnd/YaccLex/src/: YaccLex.cpp  sysy.l  sysy.y
src/frontend/compiler2022_x/ObjTree/: ObjManager.h
src/ir/: README.md
src/semantic/: SemanticAnalyzer.cpp
temp/compiler2022-x_frontend/: sysy.lex.cpp  sysy.tab.cpp  sysy.tab.hpp
temp/compiler2022-x_frontend/src/: ErrorMessage.h  StrDump.h
temp/compiler2022-x_frontend/src/FrontEnd/: Parser.cpp  Parser.h  test.sh  test.sy
temp/compiler2022-x_frontend/src/FrontEnd/NodeInfoParser/: NodeInfoParser.py
temp/compiler2022-x_frontend/src/FrontEnd/YaccLex/: test.sh  test.sy
temp/compiler2022-x_frontend/src/FrontEnd/YaccLex/src/: YaccLex.cpp  sysy.l  sysy.y
temp/compiler2022-x_frontend/src/ObjTree/: TestObjUtils.cpp  test.sh
tests/negative/: 04_call_args.sy
tests/positive/: 02_expr.sy  03_scope_const.sy  04_control.sy  05_function_array.sy  06_global_multi_array.sy  07_float.sy  08_putf.sy  09_floyd_warshall.sy
